# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("//build/config/arm.gni")
import("../build/webrtc.gni")

source_set("common_audio") {
  # TODO(andrew): Implement.
}

if (cpu_arch == "x86" || cpu_arch == "x64") {
  source_set("common_audio_sse2") {
    # TODO(andrew): Implement.
  }
}

if (cpu_arch == "arm" && arm_version == 7) {
  source_set("common_audio_neon") {
    # TODO(andrew): Implement.
  }
}
